# mojo-impl

./: .gitignore  CMakeLists.txt  README.md
src/base/: CMakeLists.txt  atomic_int.h  def.h  eintr_warpper.h  mutex.h  noncopyable.h  platform_thread.h  process.h  rand_util.h  simple_thread.h  singleton.h  thread.h  thread_local_singleton.h  timestamp.h  types.h
src/core/: CMakeLists.txt  byte_array.cc  byte_array.h  channel.cc  channel.h  channel_posix.cc  channel_posix.h  connection_params.h  core.cc  core.h  dispatcher.cc  dispatcher.h  handle_table.cc  handle_table.h  hash.cc  hash.h  invitation_dispatcher.cc  invitation_dispatcher.h  io_task_runner.h  libuv_io_task_runner_adapter.cc  libuv_io_task_runner_adapter.h  message_pipe_dispatcher.cc  message_pipe_dispatcher.h  node_channel.cc  node_channel.h  node_controller.cc  node_controller.h  protocol.h  serializer.h  sock_ops.cc  sock_ops.h  sock_pair_channel.h  types.h  util.h
src/core/ports/: event.h  message_queue.cc  message_queue.h  name.cc  name.h  node.cc  node.h  port.cc  port.h  port_ref.cc  port_ref.h  user_message.cc  user_message.h
src/core/protocols/: accept_invitation.h  accept_invitee.h  accept_peer.h  request_port_marge.h  response_port_merge.h  user_message.h
src/log/: CMakeLists.txt  log_destination.h  log_stream.h  logger.h  logging.h
test/: CMakeLists.txt  channel.cc  core.cc
